@@ -1539,6 +1539,9 @@ class ServerProxy:
                  allow_none=0, use_datetime=0):
         # establish a "logical" server connection
 
+        if isinstance(uri, unicode):
+            uri = uri.encode('ISO-8859-1')
+
         # get the url
         import urllib
         type, uri = urllib.splittype(uri)
